chore: various porting fixes and cleanups